Changed naming convention for skip links. Added trailing comment to div#main

--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -28,9 +28,9 @@
     <!--<![endif]-->
     <!--noindex-->
         <div class="skip-links" role="navigation">
-            <ul class="skip-links__list">
-                <li class="skip-links__item"><a class="skip-links__link" href="#main">Skip to the content</a></li>
-                <li class="skip-links__item"><a class="skip-links__link" href="#main-navigation">Skip to navigation</a></li>
+            <ul class="skip-links-list">
+                <li class="skip-links-item"><a class="skip-links-link" href="#main">Skip to the content</a></li>
+                <li class="skip-links-item"><a class="skip-links-link" href="#main-navigation">Skip to navigation</a></li>
             </ul>
         </div><!-- /.skip-links -->
         <div class="header" role="banner">
@@ -42,7 +42,7 @@
 
             <!-- end main-content -->
         <!--noindex-->
-        </div>
+        </div><!-- /#main -->
         <div class="footer" role="contentinfo">
 
         </div><!-- /.footer -->
