--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -36,13 +36,13 @@
         <div class="header" role="banner">
 
         </div><!-- /.header -->
-        <div id="main" role="main">
         <!--endnoindex-->
             <!-- start main-content -->
-
+            <div id="main" role="main">
+                <!-- Site main content here -->
+            </div><!-- /#main -->
             <!-- end main-content -->
         <!--noindex-->
-        </div><!-- /#main -->
         <div class="footer" role="contentinfo">
 
         </div><!-- /.footer -->
