Added plugins.js and altered the namespace for Squiz plugins

--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -6,8 +6,8 @@
         <title>Squiz Boilerplate</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="mysource_files/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" href="mysource_files/logo-144x144.png">
+        <link rel="shortcut icon" href="files/favicon.ico">
+        <link rel="apple-touch-icon-precomposed" href="files/logo-144x144.png">
 
         <link rel="stylesheet" href="css/global/global.css" />
         <link rel="stylesheet" href="css/medium/medium.css" media="(min-width: 37.5em)" /><!-- 600px or higher (with font size set @ 16px) -->
@@ -49,6 +49,7 @@
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
     <script src="js/jquery.min.js"></script>
+    <script src="js/plugins.js"></script>
     <script src="js/global.js"></script>
     </body>
 </html>
