--- a/root/source/modules/breadcrumbs/html/breadcrumbs.html
+++ b/root/source/modules/breadcrumbs/html/breadcrumbs.html
@@ -1,7 +1,7 @@
 <div class="breadcrumbs clearfix" role="navigation">
   <ol class="breadcrumbs-list">
-    <li class="breadcrumbs-item"><a href="">Home</a><span class="breadcrumbs-separator"></span></li>
-    <li class="breadcrumbs-item"><a href="">Sub page</a><span class="breadcrumbs-separator"></span></li>
+    <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Home</a><span class="breadcrumbs-separator"></span></li>
+    <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Sub page</a><span class="breadcrumbs-separator"></span></li>
     <li class="breadcrumbs-item">Current page</li>
   </ol>
 </div><!-- /.breadcrumbs -->
