Added 2 examples for tabs. Altered css to bring in additional styles

--- a/root/source/modules/tabs/html/tabs.html
+++ b/root/source/modules/tabs/html/tabs.html
@@ -1,19 +1,47 @@
-<div class="tabs" data-selected-tab="tab1">
+<p>Horizontal tabs example:</p>
+
+<div class="tabs">
   <ul class="tabs-nav-list">
-    <li class="tabs-nav-item"><a class="tabs-nav-link" href="#tab1">Tab 1</a></li>
+    <li class="tabs-nav-item tabs-nav-item-first"><a class="tabs-nav-link" href="#tab1">Tab 1</a></li>
     <li class="tabs-nav-item"><a class="tabs-nav-link" href="#tab2">Tab 2</a></li>
-    <li class="tabs-nav-item"><a class="tabs-nav-link" href="#tab3">Tab 3</a></li>
+    <li class="tabs-nav-item tabs-nav-item-last"><a class="tabs-nav-link" href="#tab3">Tab 3</a></li>
   </ul>
-  <div class="tabs-panel" id="tab1">
-    <h1>Tab #1</h1>
-    <p>Lorem ipsum dolor</p>
+  <div class="tabs-panel">
+    <div class="tabs-panel-item" id="tab1">
+      <h1>Tab #1</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
+    <div class="tabs-panel-item" id="tab2">
+      <h1>Tab #2</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
+    <div class="tabs-panel-item" id="tab3">
+      <h1>Tab #3</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
   </div>
-  <div class="tabs-panel" id="tab2">
-    <h1>Tab #2</h1>
-    <p>Lorem ipsum dolor</p>
-  </div>
-  <div class="tabs-panel" id="tab3">
-    <h1>Tab #3</h1>
-    <p>Lorem ipsum dolor</p>
+</div><!-- /.tabs -->
+
+<p>Vertical tabs example:</p>
+
+<div class="tabs tabs-vertical">
+  <ul class="tabs-nav-list">
+    <li class="tabs-nav-item tabs-nav-item-first"><a class="tabs-nav-link" href="#tab4">Tab 1</a></li>
+    <li class="tabs-nav-item"><a class="tabs-nav-link" href="#tab5">Tab 2</a></li>
+    <li class="tabs-nav-item tabs-nav-item-last"><a class="tabs-nav-link" href="#tab6">Tab 3</a></li>
+  </ul>
+  <div class="tabs-panel">
+    <div class="tabs-panel-item" id="tab4">
+      <h1>Tab #1</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
+    <div class="tabs-panel-item" id="tab5">
+      <h1>Tab #2</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
+    <div class="tabs-panel-item" id="tab6">
+      <h1>Tab #3</h1>
+      <p>Lorem ipsum dolor</p>
+    </div>
   </div>
 </div><!-- /.tabs -->
