--- a/root/source/core/example/index.html
+++ b/root/source/core/example/index.html
@@ -14,14 +14,12 @@
             <link rel="stylesheet" href="../../wide/wide.css" />
         <![endif]-->
 
-        <!-- the example stylesheets -->
-        <link rel="stylesheet" href="global.css" />
-        <link rel="stylesheet" href="medium.css" media="(min-width: 37.5em)" />
-        <link rel="stylesheet" href="wide.css" media="(min-width: 60em)" />
-        <!--[if lte IE 8]>
-            <link rel="stylesheet" href="medium.css" />
-            <link rel="stylesheet" href="wide.css" />
-        <![endif]-->
+        <!-- Styles for the presentation of all examples -->
+        <style type="text/css">
+            body {
+                padding: 1em;
+            }
+        </style>
 
         <script src="@@jsPath/modernizr.min.js"></script>
     </head>
