Added minification to the grunt file. Auto-minify certain modules on the initial build. Removed tabs unit tests.

--- a/root/source/modules/overlay/tests/tests.html
+++ b/root/source/modules/overlay/tests/tests.html
@@ -8,7 +8,9 @@
   <script src="../../../libs/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
   <script src="../../../core/js/jquery.min.js"></script>
-  <script src="tabs.js"></script>
+  <script src="../../../libs/events/EventEmitter/EventEmitter.js"></script>
+  <script src="../lib/overlay.js"></script>
+  <script src="spec.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">Basic Test Suite</h1>
