--- a/root/source/modules/nav_basic/html/index.html
+++ b/root/source/modules/nav_basic/html/index.html
@@ -7,4 +7,4 @@
         <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #5</a></li>
         <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #6</a></li>
     </ul>
-</div>
+</div><!-- /.nav-basic -->
