Added some missing files & changes that didn't come across to make the modules work correctly

--- a/root/source/modules/breadcrumbs/matrix/parse.html
+++ b/root/source/modules/breadcrumbs/matrix/parse.html
@@ -1,4 +1,4 @@
-<div class="breadcrumbs clearfix" role="navigation">
+<div class="breadcrumbs breadcrumbs-inline clearfix" role="navigation">
   <MySource_AREA id_name="breadcrumbs" design_area="asset_lineage">
     <MySource_SET name="prefix_with_home_link" value="false" />
     <MySource_SET name="suffix_with_current_link" value="false" />
