--- a/root/source/modules/breadcrumbs/html/breadcrumbs.html
+++ b/root/source/modules/breadcrumbs/html/breadcrumbs.html
@@ -1,4 +1,16 @@
-<div class="breadcrumbs clearfix" role="navigation">
+<p>Inline breadcrumbs:</p>
+
+<div class="breadcrumbs breadcrumbs-inline clearfix" role="navigation">
+  <ol class="breadcrumbs-list">
+    <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Home</a><span class="breadcrumbs-separator"></span></li>
+    <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Sub page</a><span class="breadcrumbs-separator"></span></li>
+    <li class="breadcrumbs-item">Current page</li>
+  </ol>
+</div><!-- /.breadcrumbs -->
+
+<p>Floated breadcrumbs:</p>
+
+<div class="breadcrumbs breadcrumbs-float clearfix" role="navigation">
   <ol class="breadcrumbs-list">
     <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Home</a><span class="breadcrumbs-separator"></span></li>
     <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Sub page</a><span class="breadcrumbs-separator"></span></li>
