--- a/root/source/modules/slideshow/html/index.html
+++ b/root/source/modules/slideshow/html/index.html
@@ -1,22 +1,22 @@
 <div class="slideshow">
   <ul class="slideshow-slides">
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="files/kitchen_adventurer_cheesecake_brownie.jpg" />
+        <img class="slideshow-slide-image" src="files/kitchen_adventurer_cheesecake_brownie.jpg" alt="" />
         <div class="slideshow-slide-summary">
             Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide<span></a>
         </div>
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="files/kitchen_adventurer_lemon.jpg" />
+        <img class="slideshow-slide-image" src="files/kitchen_adventurer_lemon.jpg" alt="" />
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="files/kitchen_adventurer_donut.jpg" />
+        <img class="slideshow-slide-image" src="files/kitchen_adventurer_donut.jpg" alt="" />
         <div class="slideshow-slide-summary">
             Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide<span></a>
         </div>
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="files/kitchen_adventurer_caramel.jpg" />
+        <img class="slideshow-slide-image" src="files/kitchen_adventurer_caramel.jpg" alt="" />
     </li>
   </ul>
   <div class="slideshow-nav"></div>
