--- a/root/source/core/html/keywords.html
+++ b/root/source/core/html/keywords.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>{%= client_name %} - {%= client_project %}</title>
+        <title>Squiz - Site</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="files/favicon.ico">
@@ -27,21 +27,28 @@
     <!--<![endif]-->
     <div id="page-wrapper">
     <!--noindex-->
-        <div class="skip-links" role="navigation">
-            <ul class="skip-links-list">
-                <li class="skip-links-item"><a class="skip-links-link" href="#main">Skip to the content</a></li>
-                <li class="skip-links-item"><a class="skip-links-link" href="#main-navigation">Skip to navigation</a></li>
-            </ul>
-        </div><!-- /.skip-links -->
+        @@module_skip_links--skip-links
         <div class="header" role="banner">
-
+            <div class="banner">
+                @@module_quick_search--index
+            </div>
+            <div id="main-navigation">
+                @@module_nav_basic--index
+            </div>
         </div><!-- /.header -->
     <!--endnoindex-->
-            <!-- start main-content -->
-            <div id="main" role="main">
-                <!-- Site main content here -->
-            </div><!-- /#main -->
-            <!-- end main-content -->
+        @@module_breadcrumbs--inline
+        <!-- start main-content -->
+        <div id="main" role="main">
+            <!-- Site main content here -->
+            <h2>Tables</h2>
+            @@module_tables--index
+            @@module_tables_sortable--index
+
+            <h2>Tabs</h2>
+            @@module_tabs--tabs
+        </div><!-- /#main -->
+        <!-- end main-content -->
     <!--noindex-->
         <div class="footer" role="contentinfo">
 
