Split tables example into 2.

--- a/root/source/core/html/keywords.html
+++ b/root/source/core/html/keywords.html
@@ -42,7 +42,7 @@
         <div id="main" role="main">
             <!-- Site main content here -->
             <h2>Tables</h2>
-            @@module_tables--index
+            @@module_tables--simple
             @@module_tables_sortable--index
 
             <h2>Tabs</h2>
