Fixed copy process for the grunt-init template and binary image files.

--- a/root/source/core/html/keywords.html
+++ b/root/source/core/html/keywords.html
@@ -30,6 +30,7 @@
         @@module_skip_links--skip-links
         <div class="header" role="banner">
             <div class="banner">
+                @@module_header_logo--index
                 @@module_quick_search--index
             </div>
             <div id="main-navigation">
@@ -47,6 +48,9 @@
 
             <h2>Tabs</h2>
             @@module_tabs--tabs
+
+            <h2>Tabs</h2>
+            @@module_slideshow--index
         </div><!-- /#main -->
         <!-- end main-content -->
     <!--noindex-->
