--- a/root/source/core/example/index.html
+++ b/root/source/core/example/index.html
@@ -28,6 +28,7 @@
     <!--[if IE 8]><body class="no-js lt-ie9"><![endif]-->
     <!--[if gt IE 8]><!-->
     <body class="no-js">
+    <!--<![endif]-->
 @@content
       <script src="@@jsPath/jquery.min.js"></script>
       <script src="@@jsPath/plugins.js"></script>
