--- a/root/source/modules/overlay/tests/tests.html
+++ b/root/source/modules/overlay/tests/tests.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Basic Test Suite</title>
+  <title>Overlay Tests</title>
   <!-- Load local QUnit. -->
   <link rel="stylesheet" href="../../../libs/qunit/qunit.css" media="screen">
   <script src="../../../libs/qunit/qunit.js"></script>
@@ -18,6 +18,20 @@
   <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
-  <div id="qunit-fixture">this had better work.</div>
+  <div id="qunit-fixture">
+    <div id="overlay1" class="overlay overlay-hidden">
+        <div class="overlay-modal clearfix" aria-live="polite">
+            <div class="overlay-modal-inner">
+                <a href="#" class="overlay-modal-close">Close</a>
+                <h2>Overlay!</h2>
+                <p>Lorem ipsum Ea sed aute veniam nisi exercitation sed est sit dolore reprehenderit quis mollit ad irure elit laboris incididunt sint dolore Duis nostrud cillum eu pariatur incididunt sunt mollit incididunt anim ut sint ut eu ex in id.</p>
+            </div>
+        </div>
+    </div><!-- /.overlay -->
+
+    <div id="overlay2" class="overlay overlay-hidden"></div>
+
+    <div id="overlay3" class="overlay overlay-hidden"></div>
+  </div>
 </body>
 </html>
