--- a/root/source/core/example/index.html
+++ b/root/source/core/example/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="../../css/medium/medium.css" media="(min-width: 37.5em)" /><!-- 600px or higher (with font size set @ 16px) -->
         <link rel="stylesheet" href="../../css/wide/wide.css" media="(min-width: 60em)" /><!-- 960px or higher (with font size set @ 16px) -->
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="../../medium/medium.css" />
-            <link rel="stylesheet" href="../../wide/wide.css" />
+            <link rel="stylesheet" href="../../css/medium/medium.css" />
+            <link rel="stylesheet" href="../../css/wide/wide.css" />
         <![endif]-->
 
         <!-- Styles for the presentation of all examples -->
