--- a/root/source/modules/slideshow/html/index.html
+++ b/root/source/modules/slideshow/html/index.html
@@ -1,9 +1,13 @@
-<div class="slideshow">
-  <ul class="slideshow-slides">
+<p>Flex slider with slide animations and re-positioned navigation:</p>
+
+<div class="slideshow flexslider">
+  <ul class="slideshow-slides slides">
     <li class="slideshow-slide">
         <img class="slideshow-slide-image" src="files/kitchen_adventurer_cheesecake_brownie.jpg" alt="" />
         <div class="slideshow-slide-summary">
-            Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide<span></a>
+            <div class="slideshow-slide-summary-inner">
+            Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide</span></a>
+            </div>
         </div>
     </li>
     <li class="slideshow-slide">
@@ -12,7 +16,9 @@
     <li class="slideshow-slide">
         <img class="slideshow-slide-image" src="files/kitchen_adventurer_donut.jpg" alt="" />
         <div class="slideshow-slide-summary">
-            Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide<span></a>
+            <div class="slideshow-slide-summary-inner">
+            Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide</span></a>
+            </div>
         </div>
     </li>
     <li class="slideshow-slide">
