--- a/root/source/modules/breadcrumbs/html/inline.html
+++ b/root/source/modules/breadcrumbs/html/inline.html
@@ -1,6 +1,7 @@
 <p>Inline breadcrumbs:</p>
 
 <div class="breadcrumbs breadcrumbs-inline clearfix" role="navigation">
+  <span class="visuallyhidden breadcrumbs-label">You are here:</span>
   <ol class="breadcrumbs-list">
     <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Home</a><span class="breadcrumbs-separator"></span></li>
     <li class="breadcrumbs-item"><a class="breadcrumbs-item-link" href="">Sub page</a><span class="breadcrumbs-separator"></span></li>
