Fixed naming of overlay source js plugin file. Fixed directory path for unit test after removing /lib directory

--- a/root/source/modules/overlay/tests/tests.html
+++ b/root/source/modules/overlay/tests/tests.html
@@ -8,7 +8,7 @@
   <script src="../../../libs/qunit/qunit.js"></script>
   <!-- Load local lib and tests. -->
   <script src="../../../core/js/jquery.min.js"></script>
-  <script src="../lib/overlay.js"></script>
+  <script src="../js/overlay.js"></script>
   <script src="spec.js"></script>
 </head>
 <body>
