Added no index tags to examples

--- a/root/source/modules/breadcrumbs/html/floated.html
+++ b/root/source/modules/breadcrumbs/html/floated.html
@@ -1,5 +1,5 @@
 <p>Floated breadcrumbs:</p>
-
+<!-- noindex -->
 <div class="breadcrumbs breadcrumbs-float clearfix" role="navigation">
   <span class="visuallyhidden breadcrumbs-label">You are here:</span>
   <ol class="breadcrumbs-list">
@@ -8,3 +8,4 @@
     <li class="breadcrumbs-item">Current page</li>
   </ol>
 </div><!-- /.breadcrumbs -->
+<!-- endnoindex -->
