--- a/root/source/modules/nav_basic/html/index.html
+++ b/root/source/modules/nav_basic/html/index.html
@@ -1,3 +1,4 @@
+<!-- noindex -->
 <div class="nav-basic clearfix">
     <ul class="nav-basic-list" role="navigation">
         <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #1</a></li>
@@ -8,3 +9,4 @@
         <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #6</a></li>
     </ul>
 </div><!-- /.nav-basic -->
+<!-- endnoindex -->
