--- a/root/source/modules/nav_dropdown/html/vertical.html
+++ b/root/source/modules/nav_dropdown/html/vertical.html
@@ -1,5 +1,5 @@
 <p>Vertical Menu</p>
-
+<!-- noindex -->
 <div class="nav-dropdown nav-dropdown-vertical clearfix">
     <ul class="nav-dropdown-list" role="navigation">
         <li class="nav-dropdown-item">
@@ -34,3 +34,4 @@
         <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #6</a></li>
     </ul>
 </div><!-- /.nav-basic -->
+<!-- endnoindex -->
