--- a/root/source/modules/skip_links/html/skip-links.html
+++ b/root/source/modules/skip_links/html/skip-links.html
@@ -1,6 +1,8 @@
+<!-- noindex -->
 <div class="skip-links" aria-hidden="true">
   <ul class="skip-links-list">
     <li class="skip-links-item"><a class="skip-links-link" href="#main">Skip to content</a></li>
     <li class="skip-links-item"><a class="skip-links-link" href="#main-navigation">Skip to navigation</a></li>
   </ul>
 </div><!-- /.skip-links -->
+<!-- endnoindex -->
