--- a/root/source/modules/nav_dropdown/html/mega.html
+++ b/root/source/modules/nav_dropdown/html/mega.html
@@ -1,5 +1,5 @@
 <p>Mega Menu</p>
-
+<!-- noindex -->
 <div class="nav-dropdown nav-dropdown-horizontal nav-dropdown-mega clearfix">
     <ul class="nav-dropdown-list" role="navigation">
         <li class="nav-dropdown-item">
@@ -123,3 +123,4 @@
         </li>
     </ul>
 </div><!-- /.nav-dropdown-mega -->
+<!-- endnoindex -->
