Added a print stylesheet taken from HTML5 BP

--- a/root/source/core/example/index.html
+++ b/root/source/core/example/index.html
@@ -14,12 +14,7 @@
             <link rel="stylesheet" href="../../css/wide/wide.css" />
         <![endif]-->
 
-        <!-- Styles for the presentation of all examples -->
-        <style type="text/css">
-            body {
-                padding: 1em;
-            }
-        </style>
+        <link rel="stylesheet" href="../../css/print/print.css" media="print" />
 
         <script src="@@jsPath/modernizr.min.js"></script>
     </head>
