--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -17,6 +17,8 @@
             <link rel="stylesheet" href="css/wide/wide.css" />
         <![endif]-->
 
+        <link rel="stylesheet" href="css/print/print.css" media="print" />
+
         <script src="js/modernizr.min.js"></script>
     </head>
     <!--[if lt IE 7]><body class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
