--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>{%= client_name %} - {%= client_project %}</title>
+        <title>ABCDE - Intranet</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="files/favicon.ico">
@@ -29,12 +29,7 @@
     <!--<![endif]-->
     <div id="page-wrapper">
     <!--noindex-->
-        <div class="skip-links" role="navigation">
-            <ul class="skip-links-list">
-                <li class="skip-links-item"><a class="skip-links-link" href="#main">Skip to the content</a></li>
-                <li class="skip-links-item"><a class="skip-links-link" href="#main-navigation">Skip to navigation</a></li>
-            </ul>
-        </div><!-- /.skip-links -->
+        @@module_skip_links--skip-links
         <div class="header" role="banner">
 
         </div><!-- /.header -->
