Added some better example styles that are only used in the examples files.

--- a/root/source/core/example/index.html
+++ b/root/source/core/example/index.html
@@ -15,6 +15,7 @@
         <![endif]-->
 
         <link rel="stylesheet" href="../../css/print/print.css" media="print" />
+        <link rel="stylesheet" href="../../css/examples/examples.css" media="all" />
 
         <script src="@@jsPath/modernizr.min.js"></script>
     </head>
