Added clearfix to floated nav elements to fix issues with IE 7

--- a/root/source/modules/tabs/html/tabs.html
+++ b/root/source/modules/tabs/html/tabs.html
@@ -1,7 +1,7 @@
 <p>Horizontal tabs example:</p>
 
 <div class="tabs" role="tabpanel">
-  <ul class="tabs-nav-list" role="tablist">
+  <ul class="tabs-nav-list clearfix" role="tablist">
     <li class="tabs-nav-item tabs-nav-item-first" role="tab"><a class="tabs-nav-link" href="#tab1">Tab 1</a></li>
     <li class="tabs-nav-item" role="tab"><a class="tabs-nav-link" href="#tab2">Tab 2</a></li>
     <li class="tabs-nav-item tabs-nav-item-last" role="tab"><a class="tabs-nav-link" href="#tab3">Tab 3</a></li>
@@ -25,7 +25,7 @@
 <p>Vertical tabs example:</p>
 
 <div class="tabs tabs-vertical" role="tabpanel">
-  <ul class="tabs-nav-list" role="tablist">
+  <ul class="tabs-nav-list clearfix" role="tablist">
     <li class="tabs-nav-item tabs-nav-item-first" role="tab"><a class="tabs-nav-link" href="#tab4">Tab 4</a></li>
     <li class="tabs-nav-item" role="tab"><a class="tabs-nav-link" href="#tab5">Tab 5</a></li>
     <li class="tabs-nav-item tabs-nav-item-last" role="tab"><a class="tabs-nav-link" href="#tab6">Tab 6</a></li>
