Added some more example modules to the full example design file

--- a/root/source/core/html/example.html
+++ b/root/source/core/html/example.html
@@ -75,12 +75,27 @@
 
                 <h2>Accordion</h2>
                 @@module_accordion--index
+
+                <h2>Overlay</h2>
+                @@module_overlay--overlay
+
+                <h2>Prettify</h2>
+                @@module_prettify--index
+
+                <h2>Tooltips</h2>
+                @@module_tooltip--index
+
+                <h2>Matrix Semantic Forms</h2>
+                @@module_forms--index
+
+                <h2>Button</h2>
+                @@module_button--button
             </div><!-- /#main -->
             <!-- end main-content -->
         </div>
     <!--noindex-->
         <div class="footer" role="contentinfo">
-
+            @@module_back_to_top--index
         </div><!-- /.footer -->
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
