Added collapsible box contribution from James Sinclair

--- a/root/source/core/html/example.html
+++ b/root/source/core/html/example.html
@@ -90,6 +90,9 @@
 
                 <h2>Button</h2>
                 @@module_button--button
+
+                <h2>Collapsible Box</h2>
+                @@module_collapsible_box--index
             </div><!-- /#main -->
             <!-- end main-content -->
         </div>
