Fixed a typo in trailing comment

--- a/root/source/modules/nav_secondary/html/index.html
+++ b/root/source/modules/nav_secondary/html/index.html
@@ -22,4 +22,4 @@
         <li class="nav-secondary-item"><a href="#" class="nav-secondary-item-link">Link #5</a></li>
         <li class="nav-secondary-item"><a href="#" class="nav-secondary-item-link">Link #6</a></li>
     </ul>
-</div><!-- /.nav-basic -->
+</div><!-- /.nav-secondary -->
