--- a/root/source/modules/font_icons/html/index.html
+++ b/root/source/modules/font_icons/html/index.html
@@ -1,5 +1,5 @@
 <p>Font Awesome cheatsheet</p>
-<p>More information on usage at: <a href="http://fontawesome.io/">Font Aweseome</a></p>
+<p>More information on usage at: <a href="http://fontawesome.io/">Font Awesome</a></p>
 
 <!-- some example styles only -->
 <style type="text/css">
