--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -45,8 +45,8 @@
         </div><!-- /.footer -->
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/jquery.min.js"></script><!-- jQuery -->
+    <script src="js/plugins.js"></script><!-- Plugins -->
+    <script src="js/global.js"></script><!-- Global -->
     </body>
 </html>
