Changed templates with new keywords that auto populate the files path and generate css link tags based on JSON config

--- a/root/source/core/html/example.html
+++ b/root/source/core/html/example.html
@@ -6,19 +6,12 @@
         <title>Squiz - Internet Site</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="files/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" href="files/logo-144x144.png">
+        <link rel="shortcut icon" href="@@files/favicon.ico">
+        <link rel="apple-touch-icon-precomposed" href="@@files/logo-144x144.png">
 
-        <link rel="stylesheet" href="css/global/global.css" />
-        <link rel="stylesheet" href="css/medium/medium.css" media="(min-width: 37.5em)" /><!-- 600px or higher (with font size set @ 16px) -->
-        <link rel="stylesheet" href="css/wide/wide.css" media="(min-width: 60em)" /><!-- 960px or higher (with font size set @ 16px) -->
-        <!--[if lte IE 8]>
-            <link rel="stylesheet" href="css/medium/medium.css" />
-            <link rel="stylesheet" href="css/wide/wide.css" />
-        <![endif]-->
+        @@css
 
-        <link rel="stylesheet" href="css/print/print.css" media="print" />
-        <link rel="stylesheet" href="css/examples/examples.css" media="all" />
+        <link rel="stylesheet" href="css/examples/examples.css" media="screen" />
 
         <script src="js/modernizr.min.js"></script>
     </head>
