--- a/root/source/core/html/index.html
+++ b/root/source/core/html/index.html
@@ -3,21 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-        <title>{%= client_name %} - {%= client_project %}</title>
+        <title>Squiz - Internet Site</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="files/favicon.ico">
-        <link rel="apple-touch-icon-precomposed" href="files/logo-144x144.png">
+        <link rel="shortcut icon" href="@@files/favicon.ico">
+        <link rel="apple-touch-icon-precomposed" href="@@files/logo-144x144.png">
 
-        <link rel="stylesheet" href="css/global/global.css" />
-        <link rel="stylesheet" href="css/medium/medium.css" media="(min-width: 37.5em)" /><!-- 600px or higher (with font size set @ 16px) -->
-        <link rel="stylesheet" href="css/wide/wide.css" media="(min-width: 60em)" /><!-- 960px or higher (with font size set @ 16px) -->
-        <!--[if lte IE 8]>
-            <link rel="stylesheet" href="css/medium/medium.css" />
-            <link rel="stylesheet" href="css/wide/wide.css" />
-        <![endif]-->
-
-        <link rel="stylesheet" href="css/print/print.css" media="print" />
+        @@css
 
         <script src="js/modernizr.min.js"></script>
     </head>
