Replaced static files with placehold.it references. Save some size and makes it more grey-box-like

--- a/root/source/modules/slideshow/html/index.html
+++ b/root/source/modules/slideshow/html/index.html
@@ -3,7 +3,7 @@
 <div class="slideshow flexslider">
   <ul class="slideshow-slides slides">
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="@@files/kitchen_adventurer_cheesecake_brownie.jpg" alt="" />
+        <img class="slideshow-slide-image" src="http://placehold.it/500x400" alt="" />
         <div class="slideshow-slide-summary">
             <div class="slideshow-slide-summary-inner">
             Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide</span></a>
@@ -11,10 +11,10 @@
         </div>
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="@@files/kitchen_adventurer_lemon.jpg" alt="" />
+        <img class="slideshow-slide-image" src="http://placehold.it/500x400" alt="" />
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="@@files/kitchen_adventurer_donut.jpg" alt="" />
+        <img class="slideshow-slide-image" src="http://placehold.it/500x400" alt="" />
         <div class="slideshow-slide-summary">
             <div class="slideshow-slide-summary-inner">
             Lorem ipsum Ex voluptate exercitation irure sed adipisicing in ex cillum Duis aliquip dolor Excepteur do. <a href="#">Read more<span class="visuallyhidden"> about slide</span></a>
@@ -22,7 +22,7 @@
         </div>
     </li>
     <li class="slideshow-slide">
-        <img class="slideshow-slide-image" src="@@files/kitchen_adventurer_caramel.jpg" alt="" />
+        <img class="slideshow-slide-image" src="http://placehold.it/500x400" alt="" />
     </li>
   </ul>
   <div class="slideshow-nav"></div>
