Overlay module keyword updated to reflect new overlay html files.

--- a/root/source/core/html/example.html
+++ b/root/source/core/html/example.html
@@ -70,7 +70,7 @@
                 @@module_accordion--index
 
                 <h2>Overlay</h2>
-                @@module_overlay--overlay
+                @@module_overlay--gallery
 
                 <h2>Prettify</h2>
                 @@module_prettify--index
