Fixed semantic roles for basic nav list

--- a/root/source/modules/nav_basic/html/index.html
+++ b/root/source/modules/nav_basic/html/index.html
@@ -1,10 +1,10 @@
 <div class="nav-basic clearfix">
-    <ul class="nav-basic-list" role="navigation">
-        <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #1</a></li>
-        <li class="nav-basic-item nav-basic-item-current"><a href="#" class="nav-basic-item-link">Link #2</a></li>
-        <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #3</a></li>
-        <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #4</a></li>
-        <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #5</a></li>
-        <li class="nav-basic-item"><a href="#" class="nav-basic-item-link">Link #6</a></li>
+    <ul class="nav-basic-list" role="menu">
+        <li class="nav-basic-item" role="menuitem"><a href="#" class="nav-basic-item-link">Link #1</a></li>
+        <li class="nav-basic-item nav-basic-item-current" role="menuitem"><a href="#" class="nav-basic-item-link">Link #2</a></li>
+        <li class="nav-basic-item" role="menuitem"><a href="#" class="nav-basic-item-link">Link #3</a></li>
+        <li class="nav-basic-item" role="menuitem"><a href="#" class="nav-basic-item-link">Link #4</a></li>
+        <li class="nav-basic-item" role="menuitem"><a href="#" class="nav-basic-item-link">Link #5</a></li>
+        <li class="nav-basic-item" role="menuitem"><a href="#" class="nav-basic-item-link">Link #6</a></li>
     </ul>
 </div><!-- /.nav-basic -->
