--- a/root/source/modules/nav_basic/html/parse.html
+++ b/root/source/modules/nav_basic/html/parse.html
@@ -4,9 +4,9 @@
    <MySource_SET name="settings.class.current" value="nav-basic-item-current" />
    <MySource_SET name="settings.class.hierarchy" value="nav-basic-item-current" />
    <MySource_SET name="level" value="top"/>
-   <ul class="nav-basic-list" role="navigation">
+   <ul class="nav-basic-list" role="menu">
    <MySource_ASSET>
-      <li class="nav-basic-item <MySource_PRINT var="settings.class" />"><a href="<MySource_PRINT var="asset_link" />" class="nav-basic-item-link"><MySource_PRINT var="asset_short_name" /></a></li>
+      <li class="nav-basic-item <MySource_PRINT var="settings.class" />" role="menuitem"><a href="<MySource_PRINT var="asset_link" />" class="nav-basic-item-link"><MySource_PRINT var="asset_short_name" /></a></li>
    </MySource_ASSET>
    </ul>
    </MySource_AREA>
