Fixed incorrect role attributes on menu. Added missing classes from nav secondary parse file solution.

--- a/root/source/modules/nav_dropdown/html/mega.html
+++ b/root/source/modules/nav_dropdown/html/mega.html
@@ -1,7 +1,7 @@
 <p>Mega Menu</p>
 <div class="nav-dropdown nav-dropdown-horizontal nav-dropdown-mega clearfix">
-    <ul class="nav-dropdown-list" role="navigation">
-        <li class="nav-dropdown-item">
+    <ul class="nav-dropdown-list" role="menu">
+        <li class="nav-dropdown-item" role="menuitem">
             <a href="#" class="nav-dropdown-item-link">Link #1</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
@@ -11,7 +11,7 @@
                         </p>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content">
+                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -20,7 +20,7 @@
                         </ul>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content">
+                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -39,7 +39,7 @@
                 </p>
             </div>
         </li>
-        <li class="nav-dropdown-item nav-dropdown-item-current">
+        <li class="nav-dropdown-item nav-dropdown-item-current" role="menuitem">
             <a href="#" class="nav-dropdown-item-link">Link #2</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
@@ -49,7 +49,7 @@
                         </p>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content">
+                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -58,14 +58,14 @@
                         </ul>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <div class="nav-dropdown-sub-mega-column-content">
+                        <div class="nav-dropdown-sub-mega-column-content" role="menu">
 
                             <h2>Link #2</h2>
                             <p>Lorem ipsum Sed deserunt et esse velit Duis pariatur et sint in magna tempor occaecat Ut sint nostrud ad id dolor culpa elit culpa proident culpa ea in consequat.</p>
                         </div>
                     </div>
                     <div class="nav-dropdown-sub-mega-column">
-                        <ul class="nav-dropdown-sub-mega-column-content">
+                        <ul class="nav-dropdown-sub-mega-column-content" role="menu">
                             <li><a href="#">Column link #1</a></li>
                             <li><a href="#">Column link #2</a></li>
                             <li><a href="#">Column link #3</a></li>
@@ -76,12 +76,12 @@
                 </div>
             </div>
         </li>
-        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
-        <li class="nav-dropdown-item">
+        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
+        <li class="nav-dropdown-item" role="menuitem">
             <a href="#" class="nav-dropdown-item-link">Link #4</a>
         </li>
-        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
-        <li class="nav-dropdown-item">
+        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
+        <li class="nav-dropdown-item" role="menuitem">
             <a href="#" class="nav-dropdown-item-link">Link #6</a>
             <div class="nav-dropdown-sub">
                 <div class="nav-dropdown-sub-mega-row">
