--- a/root/source/modules/nav_dropdown/html/vertical.html
+++ b/root/source/modules/nav_dropdown/html/vertical.html
@@ -1,35 +1,35 @@
 <p>Vertical Menu</p>
 <div class="nav-dropdown nav-dropdown-vertical clearfix">
-    <ul class="nav-dropdown-list" role="navigation">
-        <li class="nav-dropdown-item">
+    <ul class="nav-dropdown-list" role="menu">
+        <li class="nav-dropdown-item" role="menuitem">
             <a href="#" class="nav-dropdown-item-link">Link #1</a>
-            <ul class="nav-dropdown-sub">
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
+            <ul class="nav-dropdown-sub" role="menu">
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
             </ul>
         </li>
-        <li class="nav-dropdown-item nav-dropdown-item-current">
-            <a href="#" class="nav-dropdown-item-link">Link #2</a>
-            <ul class="nav-dropdown-sub">
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
+        <li class="nav-dropdown-item" role="menuitem">
+            <a href="#" class="nav-dropdown-item-link">Link #1</a>
+            <ul class="nav-dropdown-sub" role="menu">
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
             </ul>
         </li>
-        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
-        <li class="nav-dropdown-item">
-            <a href="#" class="nav-dropdown-item-link">Link #4</a>
-            <ul class="nav-dropdown-sub">
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
-                <li class="nav-dropdown-sub-item"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
+        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #3</a></li>
+        <li class="nav-dropdown-item" role="menuitem">
+            <a href="#" class="nav-dropdown-item-link">Link #1</a>
+            <ul class="nav-dropdown-sub" role="menu">
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #1</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #2</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #3</a></li>
+                <li class="nav-dropdown-sub-item" role="menuitem"><a href="#" class="nav-dropdown-sub-item-link">Sub Link #4</a></li>
             </ul>
         </li>
-        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
-        <li class="nav-dropdown-item"><a href="#" class="nav-dropdown-item-link">Link #6</a></li>
+        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #5</a></li>
+        <li class="nav-dropdown-item" role="menuitem"><a href="#" class="nav-dropdown-item-link">Link #6</a></li>
     </ul>
-</div><!-- /.nav-basic -->
+</div><!-- /.nav-dropdown-vertical -->
