Removed roles from th elements. Having no roles is better than having incorrect ones.

--- a/root/source/modules/tables/html/simple.html
+++ b/root/source/modules/tables/html/simple.html
@@ -3,9 +3,9 @@
 <table id="test-table">
     <thead>
         <tr>
-            <th role="columnheader">Name</th>
-            <th role="columnheader">Title</th>
-            <th role="columnheader">Summary</th>
+            <th>Name</th>
+            <th>Title</th>
+            <th>Summary</th>
         </tr>
     </thead>
     <tbody>
