--- a/root/source/modules/tables_sortable/html/index.html
+++ b/root/source/modules/tables_sortable/html/index.html
@@ -3,10 +3,10 @@
 <table id="test-table-sortable" class="table-sortable">
     <thead>
         <tr>
-            <th role="columnheader">Character Name</th>
-            <th role="columnheader">Actor</th>
-            <th role="columnheader">Episode Count</th>
-            <th role="columnheader">Date</th>
+            <th>Character Name</th>
+            <th>Actor</th>
+            <th>Episode Count</th>
+            <th>Date</th>
         </tr>
     </thead>
     <tbody>
