--- a/root/source/modules/tables/html/responsive.html
+++ b/root/source/modules/tables/html/responsive.html
@@ -4,11 +4,11 @@
     <table id="test-responsive-table">
         <thead>
             <tr>
-                <th role="columnheader">Col 1</th>
-                <th role="columnheader">Col 2</th>
-                <th role="columnheader">Col 3</th>
-                <th role="columnheader">Col 4</th>
-                <th role="columnheader">Col 5</th>
+                <th>Col 1</th>
+                <th>Col 2</th>
+                <th>Col 3</th>
+                <th>Col 4</th>
+                <th>Col 5</th>
             </tr>
         </thead>
         <tbody>
