Fixed the matrix generated HTML so it passes validation tests

--- a/root/source/modules/forms/html/index.html
+++ b/root/source/modules/forms/html/index.html
@@ -11,7 +11,7 @@ id="form_email_18768">
 
   <div class="sq-form-unattached">
     <div class="sq-form-question sq-form-question-text ">
-      <label for="q18768_q4" class="sq-form-question-title">Postcode</label> <em class="sq-form-question-note">4 digits Australian Postcode</em> 
+      <label for="q18768_q4" class="sq-form-question-title">Postcode</label> <em class="sq-form-question-note">4 digits Australian Postcode</em>
       <div class="sq-form-question-answer">
         <input type="text" class="sq-form-field" id="q18768_q4" maxlength="300"
         size="6" value="" name="q18768:q4" data-rule-minlength="4" data-rule-maxlength="4" data-rule-digits="true" data-msg-digits="Only digits allowed." required />
@@ -24,7 +24,7 @@ id="form_email_18768">
 
     <div class="sq-form-question sq-form-question-text">
       <label for="q20322_q1" class="sq-form-question-title">Name <abbr title="required" class="sq-form-required-field">*</abbr>
-      </label> <em class="sq-form-question-note">Please enter your full name</em> 
+      </label> <em class="sq-form-question-note">Please enter your full name</em>
       <div class="sq-form-question-answer">
         <input type="text" class="sq-form-field" id="q20322_q1" maxlength="300"
         size="30" value="" name="q20322:q1" data-rule-required="true" required />
@@ -56,7 +56,7 @@ id="form_email_18768">
     </div>
     <div class="sq-form-question sq-form-question-password">
       <fieldset>
-        <legend class="sq-form-question-title">Password</legend> <em class="sq-form-question-note">Enter twice to confirm</em> 
+        <legend class="sq-form-question-title">Password</legend> <em class="sq-form-question-note">Enter twice to confirm</em>
         <div
         class="sq-form-question-answer">
           <div class="sq-form-question-password">
@@ -104,7 +104,7 @@ id="form_email_18768">
           <input type="hidden" value="dmy" name="q20322_q5_show" />
           <label for="q20322_q5_value_d">Day</label>
           <select class="sq-form-field" id="q20322_q5_value_d" name="q20322_q5_value[d]">
-            <option value="--"></option>
+            <option value="--">None</option>
             <option selected="selected" value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -139,7 +139,7 @@ id="form_email_18768">
           </select>
           <label for="q20322_q5_value_m">Month</label>
           <select class="sq-form-field" id="q20322_q5_value_m" name="q20322_q5_value[m]">
-            <option value="--"></option>
+            <option value="--">None</option>
             <option selected="selected" value="1">Jan</option>
             <option value="2">Feb</option>
             <option value="3">Mar</option>
@@ -462,7 +462,7 @@ id="form_email_18768">
     <legend class="sq-form-section-title">Other information</legend>
     <div class="sq-form-question sq-form-question-option-list ">
       <fieldset>
-        <legend class="sq-form-question-title">What's your favourite sport?</legend> <em class="sq-form-question-note">Please only choose 1 option</em> 
+        <legend class="sq-form-question-title">What's your favourite sport?</legend> <em class="sq-form-question-note">Please only choose 1 option</em>
         <div
         class="sq-form-question-answer">
           <ul>
@@ -523,8 +523,7 @@ id="form_email_18768">
       <fieldset>
         <legend class="sq-form-question-title">Which class would you attend?</legend>
         <div class="sq-form-question-answer">
-          <table cellspacing="0" cellpadding="0" border="0" summary="Teh summary of table content"
-          id="q20323_q3" class="sq-backend-table">
+          <table id="q20323_q3" class="sq-backend-table">
             <caption>Class Time Table</caption>
             <tbody>
               <tr>
