Replaced variable name with correct default. Replaced the button defaults with something more generic (no icon, plain text)

--- a/root/source/modules/quick_search/html/index.html
+++ b/root/source/modules/quick_search/html/index.html
@@ -3,7 +3,7 @@
         <label for="quick-search-query" class="quick-search-label visuallyhidden">Search</label>
         <input type="text" autocomplete="off" placeholder="Enter search terms" name="query" id="quick-search-query" class="quick-search-input input-field" />
         <span class="input-addon">
-            <button type="submit" class="icon-search quick-search-submit"><span class="quick-search-submit-text">Start Search</span></button>
+            <button type="submit" class="quick-search-submit"><span class="quick-search-submit-text">Search</span></button>
         </span>
     </form>
 </div><!-- /.quick-search -->
