Removed accidental inclusion of PRINT tag in the <body> of the example parse file. Added comments and version numbers to script tag references

--- a/root/source/core/html/example.html
+++ b/root/source/core/html/example.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="css/examples/examples.css" media="screen" />
 
-        <script src="js/modernizr.min.js"></script>
+        <script src="js/modernizr.min.js"></script><!-- Modernizr 2.6.2 -->
     </head>
     <!--[if lt IE 7]><body class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
     <!--[if IE 7]><body class="no-js lt-ie9 lt-ie8"><![endif]-->
@@ -95,8 +95,8 @@
         </div><!-- /.footer -->
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/jquery.min.js"></script><!-- jQuery 1.9.1 -->
+    <script src="js/plugins.js"></script><!-- Plugins -->
+    <script src="js/global.js"></script><!-- Global -->
     </body>
 </html>
