--- a/root/source/core/html/parse.html
+++ b/root/source/core/html/parse.html
@@ -34,7 +34,7 @@
     <!--[if IE 7]><body class="no-js lt-ie9 lt-ie8"><![endif]-->
     <!--[if IE 8]><body class="no-js lt-ie9"><![endif]-->
     <!--[if gt IE 8]><!-->
-    <body class="no-js <MySource_PRINT id_name="classes" var="body" />">
+    <body class="no-js">
     <!--<![endif]-->
     <div id="page-wrapper">
         <!--noindex-->
